--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,105 @@
-jinja2
-openai
-datasets
-tqdm
-python-dotenv
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+aiohappyeyeballs=2.4.6=pypi_0
+aiohttp=3.11.12=pypi_0
+aiosignal=1.3.2=pypi_0
+altair=5.5.0=pypi_0
+anyio=4.8.0=pypi_0
+attrs=25.1.0=pypi_0
+beautifulsoup4=4.13.3=pypi_0
+blinker=1.9.0=pypi_0
+bzip2=1.0.8=h99b78c6_7
+ca-certificates=2025.1.31=hf0a4a13_0
+cachetools=5.5.1=pypi_0
+certifi=2025.1.31=pypi_0
+cfgv=3.4.0=pypi_0
+chardet=5.2.0=pypi_0
+charset-normalizer=3.4.1=pypi_0
+click=8.1.8=pypi_0
+datasets=3.2.0=pypi_0
+dill=0.3.8=pypi_0
+distlib=0.3.9=pypi_0
+docker=7.1.0=pypi_0
+fastcore=1.7.29=pypi_0
+filelock=3.17.0=pypi_0
+freezegun=1.5.1=pypi_0
+frozenlist=1.5.0=pypi_0
+fsspec=2024.9.0=pypi_0
+ghapi=1.0.6=pypi_0
+gitdb=4.0.12=pypi_0
+gitpython=3.1.44=pypi_0
+h11=0.14.0=pypi_0
+httpcore=1.0.7=pypi_0
+httpx=0.28.1=pypi_0
+huggingface-hub=0.28.1=pypi_0
+identify=2.6.7=pypi_0
+idna=3.10=pypi_0
+iniconfig=2.0.0=pypi_0
+jinja2=3.1.5=pypi_0
+jsonschema=4.23.0=pypi_0
+jsonschema-specifications=2024.10.1=pypi_0
+libexpat=2.6.4=h286801f_0
+libffi=3.4.2=h3422bc3_5
+liblzma=5.6.4=h39f12f2_0
+libsqlite=3.48.0=h3f77e49_1
+libzlib=1.3.1=h8359307_2
+markdown-it-py=3.0.0=pypi_0
+markupsafe=3.0.2=pypi_0
+mdurl=0.1.2=pypi_0
+multidict=6.1.0=pypi_0
+multiprocess=0.70.16=pypi_0
+narwhals=1.26.0=pypi_0
+ncurses=6.5=h5e97a16_3
+nodeenv=1.9.1=pypi_0
+numpy=2.2.2=pypi_0
+openssl=3.4.0=h81ee809_1
+packaging=24.2=pypi_0
+pandas=2.2.3=pypi_0
+pillow=11.1.0=pypi_0
+pip=25.0.1=pyh8b19718_0
+platformdirs=4.3.6=pypi_0
+pluggy=1.5.0=pypi_0
+pre-commit=4.1.0=pypi_0
+propcache=0.2.1=pypi_0
+protobuf=5.29.3=pypi_0
+pyarrow=19.0.0=pypi_0
+pydeck=0.9.1=pypi_0
+pygments=2.19.1=pypi_0
+pytest=7.4.3=pypi_0
+pytest-asyncio=0.23.8=pypi_0
+pytest-socket=0.7.0=pypi_0
+python=3.11.11=hc22306f_1_cpython
+python-dateutil=2.9.0.post0=pypi_0
+python-dotenv=1.0.1=pypi_0
+pytz=2025.1=pypi_0
+pyyaml=6.0.2=pypi_0
+readline=8.2=h92ec313_1
+referencing=0.36.2=pypi_0
+requests=2.32.3=pypi_0
+requests-mock=1.12.1=pypi_0
+respx=0.22.0=pypi_0
+rich=13.9.4=pypi_0
+rpds-py=0.22.3=pypi_0
+setuptools=75.8.0=pyhff2d567_0
+six=1.17.0=pypi_0
+smmap=5.0.2=pypi_0
+sniffio=1.3.1=pypi_0
+soupsieve=2.6=pypi_0
+streamlit=1.42.0=pypi_0
+streamlit-ace=0.1.1=pypi_0
+swebench=2.1.4=pypi_0
+syrupy=4.8.1=pypi_0
+tenacity=9.0.0=pypi_0
+tk=8.6.13=h5083fa2_1
+toml=0.10.2=pypi_0
+tornado=6.4.2=pypi_0
+tqdm=4.67.1=pypi_0
+typing-extensions=4.12.2=pypi_0
+tzdata=2025.1=pypi_0
+unidiff=0.7.5=pypi_0
+urllib3=2.3.0=pypi_0
+virtualenv=20.29.1=pypi_0
+wheel=0.45.1=pyhd8ed1ab_1
+xxhash=3.5.0=pypi_0
+yarl=1.18.3=pypi_0
