--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,7 @@ github_tokens.sh
 
 # Exclude specific directories in multiswebench
 multiswebench/mswebench_dataset/
+multiswebench/multi_swe_bench/harness/repos
 multiswebench/repos/
 multiswebench/multi_swe_bench.egg-info/
 multiswebench/data/
