--- a/baselines/sweagent/reviewfix.yaml
+++ b/baselines/sweagent/reviewfix.yaml
@@ -13,6 +13,20 @@ agent:
       {{problem_statement}}
       </pr_description>
 
+      Additionally, here are examples of three **previous patch attempts** that failed to resolve this or similar issues:
+
+      <bad_patches>
+      {{bad_patches}}
+      </bad_patches>
+
+      And here are the three corresponding **reviews explaining why those patches failed**:
+
+      <reviews>
+      {{reviews}}
+      </reviews>
+
+      Please carefully review the above failed patches and their reviews. Use these insights to **avoid repeating the same mistakes** and to **guide your reasoning** when building a correct patch.
+
       Can you help me implement the necessary changes to the repository so that the requirements specified in the <pr_description> are met?
       I've already taken care of all changes to any of the test files described in the <pr_description>. This means you DON'T have to modify the testing logic or any of the tests in any way!
       Your task is to make the minimal changes to non-tests files in the {{working_dir}} directory to ensure the <pr_description> is satisfied.
